fix watch entry alignment

--- a/src/App.css
+++ b/src/App.css
@@ -85,8 +85,14 @@ body,html {
   display: flex;
   flex-direction: column;
   gap: 15px;
-  justify-content: center;
-  align-items: center;
+  margin: 0 50px 0 50px
+}
+
+.watch-list-container {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  overflow: auto;
 }
 
 .watch-list-container::-webkit-scrollbar {
